--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title>CICD course work</title>
 </head>
 <body>
-This is CICD course work by Kuzko Vladimir!!!
+This is CICD (Probe 1) course work by Kuzko Vladimir!!!
 </body>
 </html>
