--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>CICD course work</title>
+<title>CICD (Probe 1) course work</title>
 </head>
 <body>
 This is CICD (Probe 1) course work by Kuzko Vladimir!!!
